# zihuan-aibot-800a

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  create_webaviate_AIBot_knowledge_schema.sh  flake.nix  model.pt  model.pth  pyproject.toml  requirements.txt  tempCodeRunnerFile.cpp  test_data.txt
docs/en_US/: bot_adapter.md  bot_cmd.md  message_processing.md  model.md  unit_test.md  utils.md
docs/zh_CN/: LTP_MODEL_README.md  bot_adapter.md  bot_cmd.md  message_processing.md  model.md  utils.md
include/: adapter_cmd.hpp  adapter_event.h  adapter_message.h  adapter_model.h  bot_adapter.h  bot_cmd.h  chat_session.hpp  cli_handler.h  concurrent_unordered_map.hpp  concurrent_vector.hpp  config.h  constant_types.hpp  constants.hpp  daily_rotating_file_sink.h  database.h  db_knowledge.hpp  embedding_message_id_list.hpp  event.h  favorability_prompt.hpp  get_optional.hpp  global_data.h  i18n.hpp  individual_message_storage.hpp  llm.h  llm_function_tools.hpp  msg_db.h  msg_prop.h  mutex_data.hpp  mysql_connector.h  neural_network.h  plugin.h  rag.h  think_image_manager.h  time_utils.h  user_protait.h  utils.h  ws_client.h
include/agent/: action_agent.h  action_descript_prompt.hpp  agent.h  brain.h  function_call_agent_wrapper.h  llm.h  llm_function_tools.hpp  simple_chat_action_agent.h
include/neural_network/: model_set.h  nn.h  text_model.h
include/neural_network/llm/: agent.h  llm.h
include/neural_network/nlp/: chat_text_classifier.h
include/neural_network/text_model/: ahocorasick.h  lac.h  lac_custom.h  lac_util.h  ltp_model.h  text_embedding_model.h  text_embedding_with_mean_pooling_model.h  tokenizer_wrapper.h
include/neural_network/text_model/lac/: ahocorasick.h  lac.h  lac_custom.h  lac_util.h  tag_constants.hpp
include/tool_impl/: common.hpp  fetch_url_content.hpp  get_function_list.hpp  query_group.hpp  search_info.hpp  view_chat_history.hpp  view_model_info.hpp
include/vec_db/: models.h  weaviate.h
nn/: analyze_embedding_differences.py  analyze_label_distribution.py  dataset_loader.py  export_embedding_model.py  export_model.py  export_replay_intent_classifier_model.py  models.py  test_onnx.py  test_replay_intent_classifier.py  test_text_embedding_model.py  text_binary_classfiy.py  train_chat_text_classifier.py  train_chat_text_classifier_baseline.py  train_reply_intent_classifier.py  train_text_binary_classify.py
nn_test/: test_chat_text_classifier.py  test_chat_text_classifier_baseline.py  test_ltp.py  test_qwen3.py  test_replay_intent_classifier.py  test_text_embedding_model.py
res/: agent_dict.json
src/: bot_adapter.cpp  bot_cmd.cpp  cli_handler.cpp  config.cpp  constants.cpp  database.cpp  event.cpp  global_data.cpp  llm.cpp  main.cpp  msg_db.cpp  msg_prop.cpp  neural_network.cpp  plugin.cpp  rag.cpp  utils.cpp
src/agent/: action_agent.cpp  agent.cpp  brain.cpp  function_call_agent_wrapper.cpp  llm.cpp  simple_chat_action_agent.cpp
src/neural_network/: model_set.cpp  nn.cpp  text_model.cpp  text_model_old.cpp
src/neural_network/llm/: llm.cpp
src/neural_network/text_model/: ahocorasick.cpp  lac.cpp  lac_custom.cpp  lac_util.cpp  ltp_model.cpp  text_embedding_model.cpp  text_embedding_with_mean_pooling_model.cpp  tokenizer_wrapper.cpp
src/neural_network/text_model/lac/: ahocorasick.cpp  lac.cpp  lac_custom.cpp  lac_util.cpp
src/vec_db/: weaviate.cpp
test/: unit_test.cpp
utils/: config_loader.py  data_loader.py  string.py
vec_db/: config_loader.py  create_knowledge_schema.py  export_knowledge.py  import_knowledge.py  import_knowledge_from_csv.py  import_knowledge_from_file.py  logging_config.py  migrate_knowledge.py  model.py  nn_model.py  query_knowledge.py  schema_collection.py  vec_related.py  vec_service.py
weaviate/: create_webaviate_AIBot_knowledge_schema.sh  create_webaviate_group_msg_schema.sh  docker-compose.yml  migrate_knowledge.py
