[project]
name = "zihuan-aibot-800a"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.8.1",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "jieba>=0.42.1",
    "matplotlib>=3.10.3",
    "ncnn>=1.0.20250503",
    "onnx>=1.18.0",
    "onnxsim>=0.4.36",
    "openai>=1.82.0",
    "pandas>=2.2.3",
    "path>=17.1.0",
    "pnnx>=20250430",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "socksio>=1.0.0",
    "torch>=2.7.0",
    "transformers>=4.52.3",
    "uvicorn>=0.34.2",
    "weaviate-client>=4.14.4",
    "accelerate",
    "ipython>=9.3.0",
    "tqdm",
    "netron>=8.4.4",
    "tensorboard>=2.19.0",
    "ltp>=4.2.14",
    "numpy>=2.2.6",
    "seaborn>=0.13.2",
]
